[gd_scene load_steps=10 format=3 uid="uid://6t5562wtp0q7"]

[ext_resource type="Texture2D" uid="uid://bi07hksc3frpg" path="res://assets/images/enemies/turret/turret-sprites-deployment.png" id="1_ckrq5"]
[ext_resource type="Script" uid="uid://cx8hq5j0wna23" path="res://scenes/actors/enemy/turret/turret_enemy.gd" id="1_xqlo1"]

[sub_resource type="Animation" id="Animation_bpnds"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HurtBox/CollisionShape2D:shape:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(20, 63)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HurtBox/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 2.5)]
}

[sub_resource type="Animation" id="Animation_xqlo1"]
resource_name = "new_animation"
length = 0.27
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0651608, 0.1, 0.133333, 0.166667, 0.2, 0.233333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HurtBox/CollisionShape2D:shape:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.27),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(20, 63), Vector2(20, 131)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HurtBox/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.27),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 2.5), Vector2(0, -31.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tf7fd"]
_data = {
&"RESET": SubResource("Animation_bpnds"),
&"new_animation": SubResource("Animation_xqlo1")
}

[sub_resource type="Animation" id="Animation_tf7fd"]
resource_name = "hurt"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.743186, 3.76623e-06, 7.70092e-07, 1), Color(0.745098, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_2qmsd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o0iyu"]
_data = {
&"RESET": SubResource("Animation_2qmsd"),
&"hurt": SubResource("Animation_tf7fd")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xqlo1"]
size = Vector2(20, 63)

[node name="TurretEnemy" type="Node2D"]
script = ExtResource("1_xqlo1")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -32)
scale = Vector2(3.5, 4)
texture = ExtResource("1_ckrq5")
hframes = 8
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_tf7fd")
}
speed_scale = 0.5

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(600, 0)
collision_mask = 2

[node name="Timers" type="Node2D" parent="."]

[node name="ShootTimer" type="Timer" parent="Timers"]

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_o0iyu")
}

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_xqlo1")

[connection signal="timeout" from="Timers/ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
